# rpack

./: .gitignore  CNAME  Cargo.toml  README.md  build.rs  index.html  justfile  rpack-17d769465b5e9c3a.js  rpack-2483bcbd6ea8244c.js  rpack_egui-187aaaef353e8748.js  rpack_egui-2c2ca0ceee6dd1a3.js  rpack_egui-43769be196d60513.js  rpack_egui-4d65395bce8dae7e.js  rpack_egui-c5bd515406b71b48.js  sw.js
.github/workflows/: build.yml  bundle.yml  itch.yml  pages.yml  rust.yml
crates/bevy_rpack/: CHANGELOG.md  Cargo.toml  README.md  example_config.rpack_gen.json  justfile
crates/bevy_rpack/assets/: tilemap.rpack.json
crates/bevy_rpack/examples/: simple.rs
crates/bevy_rpack/src/: bevy.rs  lib.rs  plugin.rs
crates/bevy_rpack/src/packer/: mod.rs
crates/rpack/: Cargo.toml  index.html  rust-toolchain
crates/rpack/src/: app.rs  fonts.rs  helpers.rs  lib.rs  main.rs
crates/rpack_cli/: CHANGELOG.md  Cargo.toml  README.md
crates/rpack_cli/src/: commands.rs  formats.rs  lib.rs  main.rs  packer.rs  saving.rs
crates/rpack_cli/src/commands/: mod.rs
crates/rpack_egui/: Cargo.toml  README.md  build.rs  index.html  justfile
crates/rpack_egui/src/: app.rs  fonts.rs  helpers.rs  lib.rs  main.rs  view_settings.rs
crates/rpack_egui/static/: Info.plist
src/: app.rs  main.rs
