[workspace]
resolver = "2"
members = [
    "crates/bevy_rpack",
    "crates/rpack_egui",
    "crates/rpack_cli",
]

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true
strip = true


# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
texture_packer = { version = "0.30", features = ["common"] }
image = { version = "0.25", features = ["jpeg", "png"] }