[package]
name = "bevy_rpack"
description = "Bevy plugin with rpack atlas support"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/Leinnan/rpack.git"
homepage = "https://github.com/Leinnan/rpack"
authors = ["Piotr Siuszko <siuszko@zoho.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "2d", "plugin"]
exclude = ["assets","tiles","*.rpack_gen.json", "justfile"]

[features]
default = ["bevy"]
bevy = ["dep:bevy"]

[dependencies]
bevy = { version = "0.15", optional = true, default-features = false, features = [
    "bevy_asset",
    "bevy_sprite",
    "bevy_image",
    "bevy_ui",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_window",
    "bevy_winit",
    "bevy_ui",
    "multi_threaded",
    "png",
    "webgl2",
] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"