[package]
name = "bevy_rpack"
description = "Bevy plugin with rpack atlas support"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/Leinnan/rpack.git"
homepage = "https://github.com/Leinnan/rpack"
authors = ["Piotr Siuszko <siuszko@zoho.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "2d", "plugin"]
exclude = ["assets", "tiles", "*.rpack_gen.json", "justfile"]

[features]
default = ["bevy"]
bevy = ["dep:bevy_app", "dep:bevy_platform", "dep:bevy_math", "dep:bevy_image", "dep:bevy_asset", "dep:bevy_ecs", "dep:bevy_reflect", "dep:bevy_ui", "dep:bevy_derive", "dep:bevy_sprite"]

[dependencies]
bevy_math = { version = "0.16", optional = true }
bevy_image = { version = "0.16", optional = true }
bevy_app = { version = "0.16", optional = true }
bevy_asset = { version = "0.16", optional = true }
bevy_ecs = { version = "0.16", optional = true }
bevy_reflect = { version = "0.16", optional = true }
bevy_ui = { version = "0.16", optional = true }
bevy_derive = { version = "0.16", optional = true }
bevy_platform = { version = "0.16", optional = true }
bevy_sprite = { version = "0.16", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_window",
    "bevy_winit",
    "bevy_ui",
    "multi_threaded",
    "png",
    "webgl2",
] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
