[package]
name = "rpack_cli"
authors = ["Piotr Siuszko <siuszko@zoho.com>"]
license = "MIT"
edition = "2021"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:glob"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true}
bevy_rpack = { default-features = false, path = "../bevy_rpack" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
texture_packer = { version = "0.29", features = ["common"] }
image = { version = "0.25", features = ["jpeg", "png"] }
glob = {version = "0.3", optional = true}
