[package]
name = "rpack_cli"
authors = ["Piotr Siuszko <siuszko@zoho.com>"]
description = "CLI application for generating rpack atlases"
repository = "https://github.com/Leinnan/rpack.git"
homepage = "https://github.com/Leinnan/rpack"
license = "MIT OR Apache-2.0"
version = "0.2.0"
edition = "2021"

[features]
default = ["cli", "dds"]
cli = ["dep:clap", "dep:glob"]
basis = ["dep:basis-universal"]
dds = ["dep:image_dds"]

[dependencies]
bevy_rpack = { default-features = false, path = "../bevy_rpack", version = "0.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
texture_packer = { workspace = true }
image = { version = "0.25", features = ["jpeg", "png"] }
thiserror = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"], optional = true }
glob = { version = "0.3", optional = true }
basis-universal = { version = "0.3.1", optional = true }
image_dds = { version = "0.7", optional = true }
anyhow = "1"
