[package]
name = "rpack_egui"
version = "0.3.0"
description = "GUI application for generating rpack atlases"
authors = ["Piotr Siuszko <siuszko@zoho.com>"]
edition = "2024"
repository = "https://github.com/Leinnan/rpack.git"
homepage = "https://github.com/Leinnan/rpack"
license = "MIT OR Apache-2.0"

[dependencies]
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
log = "0.4"
egui_json_tree = "0.13"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
serde_json = "1"
texture_packer = { workspace = true }
image = { workspace = true }
egui_extras = { version = "0.32", features = ["all_loaders"] }
rfd = { version = "0.15", features = [] }
wasm-bindgen-futures = "0.4"
anyhow = "1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
rpack_cli = { default-features = false, features = ["config_ext"], path = "../rpack_cli", version = "0.3" }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
rpack_cli = { default-features = false, path = "../rpack_cli", version = "0.3" }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Url",
    "HtmlAnchorElement",
    "Blob",
    "BlobPropertyBag",
] }
js-sys = "0.3"
