[package]
name = "rpack_egui"
version = "0.3.0"
description = "GUI application for generating rpack atlases"
authors = ["Piotr Siuszko <siuszko@zoho.com>"]
edition = "2021"
repository = "https://github.com/Leinnan/rpack.git"
homepage = "https://github.com/Leinnan/rpack"
license = "MIT OR Apache-2.0"

[features]
profiler = ["dep:puffin", "dep:puffin_http", "dep:profiling"]

[dependencies]
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "persistence",
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
log = "0.4"
egui_json_tree = "0.13"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
serde_json = "1"
texture_packer = { workspace = true }
image = { workspace = true }
egui_extras = { version = "0.32", features = ["all_loaders"] }
rfd = { version = "0.15", features = [] }
wasm-bindgen-futures = "0.4"
anyhow = "1"
crossbeam = "0.8"
once_cell = "1"
futures = "0.3.12"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
puffin = {version = "0.19", optional = true}
puffin_http = {version = "0.16", optional = true}
profiling = {version = "1.0.16", optional = true, default-features = false , features = ["profile-with-puffin"] }
env_logger = "0.11"
rpack_cli = { default-features = false, features = ["config_ext"], path = "../rpack_cli", version = "0.3" }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
rpack_cli = { default-features = false, path = "../rpack_cli", version = "0.3" }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Url",
    "HtmlAnchorElement",
    "Blob",
    "BlobPropertyBag",
] }
js-sys = "0.3"

[package.metadata.bundle]
name = "Rpack"
resources = ["static/resources/*"]
identifier = "io.github.leinnan.rpack"
osx_url_schemes = ["io.github.leinnan.rpack"]
short_description = "Tilemap Editor"
long_description = "Tilemap Editor built with egui in Rust"
